--- a/src/search/search.css
+++ b/src/search/search.css
@@ -1,12 +1,11 @@
-.searchbox {
-   
+.search {
+   margin-top: 30px;
 }
 
 input{
-    width: 15%;
+    width: 20%;
     padding: 8px 12px;
     font-size: 18px;
-    margin-top: 20px;
 }
 
 button {
