--- a/src/charactercontainer/charactercontainer.css
+++ b/src/charactercontainer/charactercontainer.css
@@ -9,6 +9,18 @@
     cursor: pointer;
 }
 
+.wrapper {
+    position: relative;
+ }
+ 
+ .wrapper .fa {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: white;
+    padding: 3px;
+ }
+
 .characterimage {
     border: 1px solid grey;
     
@@ -18,4 +30,8 @@
     font-size: 18px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.message {
+    margin-top: 30px;
 }
